<resources>
    <string name="app_name">Don\'t Panic Educational Suite</string>
    <string name="button_login">LOGIN</string>
    <string name="button_signUp">SIGN UP</string>
    <string name="button_aboutUs">ABOUT US</string>
    <string name="textView_welcomeMessage">An easier, modern approach
        to classroom dynamics to enable both students and teachers</string>
    <string name="textView_aboutUsMessage">Don\'t Panic was created by Matt Li, Dan Dyla, Tom
    Carrio, Chase Ehlert, and Brandon Smith. This application was developed to combat the problem of students
    not participating in the classroom enough. With Don\'t Panic the team hopes to engage students
    more in the lecture while making the process of asking the professor a question more efficient.\n\nClick
        on one of the images below to view that teammates website or github account.</string>
    <string name="editText_login">Login</string>
    <string name="editText_password">Password</string>
    <string name="button_enter">Enter</string>
    <string name="button_reset">Reset</string>
    <string name="editText_signInFirstName">First Name</string>
    <string name="editText_signInLastName">Last Name</string>
    <string name="editText_signInEmail">E-mail Address</string>
    <string name="editText_signInUsername">Username</string>
    <string name="editText_signInPassword">Password</string>
    <string name="imageButton_Dan">Link to Dan\'s website.</string>
    <string name="imageButton_Tom">Link to Tom\'s website.</string>
    <string name="imageButton_Matt">Link to Matt\'s github.</string>
    <string name="imageButton_Chase">Link to Chase\'s github.</string>
    <string name="imageButton_Brandon">Link to Brandon\'s github.</string>
    <string name="loginSuccessMessage">You have been successfully logged in.</string>
    <string name="imageView_backgroundStart">ImageView for the background image.</string>
    <string name="button_createClass">Create New Class</string>
    <string name="button_joinClass">Join A Class</string>
    <string name="textView_classActivityTitle">Class Actions</string>
    <string name="schoolID">School ID</string>
    <string name="courseType">Course Type</string>
    <string name="courseNumber">Course Number</string>
    <string name="sectionNumber">Section Number</string>
    <string name="courseTitle">Course Title</string>
    <string name="listClasses">List Classes</string>
    <string name="joinClass">Invite Code</string>
    <string name="panicButton">Panic!</string>
    <string name="panickedStudents">Number of panicked students:</string>
</resources>