<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.chase.dontpaniceducational.ClassActionsActivity">

    <Button
        android:id="@+id/button_createClass"
        android:layout_width="143dp"
        android:layout_height="54dp"
        android:layout_marginEnd="120dp"
        android:layout_marginTop="52dp"
        android:background="@color/colorAccent"
        android:onClick="createClass"
        android:text="@string/button_createClass"
        android:textColor="@color/colorIcons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button_classList"
        android:layout_width="143dp"
        android:layout_height="54dp"
        android:layout_marginEnd="120dp"
        android:layout_marginTop="12dp"
        android:background="@color/colorAccent"
        android:onClick="joinClass"
        android:text="@string/button_joinClass"
        android:textColor="@color/colorIcons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_createClass" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="199dp"
        android:layout_height="107dp"
        android:layout_marginEnd="92dp"
        android:layout_marginTop="16dp"
        android:text="@string/textView_classActivityTitle"
        android:textColor="@color/colorPrimaryText"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>
