<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.chase.dontpaniceducational.AboutUsActivity">

    <TextView
        android:id="@+id/textView_aboutUsMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/textView_aboutUsMessage"
        android:textColor="@color/colorPrimaryText"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.094"
        app:layout_constraintHorizontal_bias="0.0" />

    <ImageButton
        android:id="@+id/imageButton_Dan"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginBottom="221dp"
        android:layout_marginStart="16dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/imageButton_Dan"
        android:scaleType="fitCenter"
        android:onClick="websiteDan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:srcCompat="@drawable/dan" />

    <ImageButton
        android:id="@+id/imageButton_Tom"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginBottom="221dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/imageButton_Tom"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:onClick="websiteTom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/tom" />

</android.support.constraint.ConstraintLayout>
