<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.chase.dontpaniceducational.StartScreenActivity">

    <TextView
        android:id="@+id/textView_welcomeMessage"
        android:layout_width="0dp"
        android:layout_height="33dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/textView_welcomeMessage"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryText"
        app:layout_constraintBottom_toTopOf="@+id/button_signUp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.49"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginLeft="120dp"
        android:layout_marginRight="120dp"
        android:background="@color/colorAccent"
        android:onClick="login"
        android:text="@string/button_login"
        android:textColor="@color/colorIcons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.501"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="120dp" />

    <Button
        android:id="@+id/button_signUp"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="120dp"
        android:layout_marginRight="120dp"
        android:background="@color/colorAccent"
        android:onClick="signUp"
        android:text="@string/button_signUp"
        android:textColor="@color/colorIcons"
        app:layout_constraintBottom_toTopOf="@+id/button_login"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="120dp" />

    <Button
        android:id="@+id/button_aboutUs"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginLeft="120dp"
        android:layout_marginRight="120dp"
        android:layout_marginTop="4dp"
        android:background="@color/colorAccent"
        android:onClick="aboutUs"
        android:text="@string/button_aboutUs"
        android:textColor="@color/colorIcons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_login"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="120dp" />
</android.support.constraint.ConstraintLayout>